Cadd text and chang font

--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
+
 <!DOCTYPE html>
-<html>
-   <head>
-       <link href="css/style.css" rel="stylesheet">
-   </head>
-   <body>
+
+<html lang="en">
+
+<head>
+
+    <meta charset="UTF-8">
+
+    <title>quickends</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
+
+</head>
+
+<body>
+
+    <h1>Touch Bar and Touch ID</h1>
        
-       <h1>some text</h1>
-       <p>hellow world</p>
-        <p>more text and /////</p>
-   </body> 
+    <h2>A revolutionary new way to use your Mac.</h2>
+       
+    <p>The Touch Bar replaces the function keys that have long occupied the top of your keyboard with something much more versatile and capable.2 It changes automatically based on what you’re doing to show you relevant tools you already know how to use — system controls like volume and brightness, interactive ways to adjust or browse through content, intelligent typing features like emoji and predictive text, and more. And for the first time, Touch ID is available on a Mac, enabling instant access to logins and fast, secure online purchases with Apple Pay.</p>
+
+</body>
+
 </html>
