--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <title>quickends</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bubbler+One|Quicksand" rel="stylesheet">
 
 </head>
 
